force-app/main/default/objects/ProjectSalesFee__c/ProjectSalesFee__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Project Sales Fee</label>
</CustomObject>