force-app/main/default/objects/ProjectSalesFee__c/fields/HigherRange__c.field-meta.xml
<CustomField>
    <fullName>HigherRange__c</fullName>
    <label>Higher Range</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>