force-app/main/default/objects/ProjectSalesFee__c/fields/LowerRange__c.field-meta.xml
<CustomField>
    <fullName>LowerRange__c</fullName>
    <label>Lower Range</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>