force-app/main/default/objects/ProjectSalesFee__c/fields/Reward__c.field-meta.xml
<CustomField>
    <fullName>Reward__c</fullName>
    <label>Reward</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>